--- a/public/styles.css
+++ b/public/styles.css
@@ -1,11 +1,15 @@
 /** @format */
 
 .dots-9 {
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	width: 12px;
 	height: 12px;
 	position: relative;
 	animation: d9-0 2s infinite steps(2);
 	color: #333;
+	margin-left: 30px;
 }
 .dots-9::before,
 .dots-9::after {
